2017.11/_sources/plugins/available/quality-control/evaluate-seqs.txt
evaluate-seqs: Compare query (observed) vs. reference (expected) sequences.
===========================================================================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime quality-control evaluate-seqs [OPTIONS]

     This action aligns a set of query (e.g., observed) sequences against a set
     of reference (e.g., expected) sequences to evaluate the quality of
     alignment. The intended use is to align observed sequences against
     expected sequences (e.g., from a mock community) to determine the
     frequency of mismatches between observed sequences and the most similar
     expected sequences, e.g., as a measure of sequencing/method error.
     However, any sequences may be provided as input to generate a report on
     pairwise alignment quality against a set of reference sequences.

   Options:
     --i-query-sequences PATH        Artifact: FeatureData[Sequence]  [required]
                                     Sequences to test for exclusion
     --i-reference-sequences PATH    Artifact: FeatureData[Sequence]  [required]
                                     Reference sequences to align against feature
                                     sequences
     --p-show-alignments / --p-no-show-alignments
                                     [default: False]
                                     Option to plot pairwise
                                     alignments of query sequences and their top
                                     hits.
     --o-visualization PATH          Visualization [required if not passing
                                     --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Compare query (observed) vs. reference (expected) sequences.

   This action aligns a set of query (e.g., observed) sequences against a set
   of reference (e.g., expected) sequences to evaluate the quality of
   alignment. The intended use is to align observed sequences against expected
   sequences (e.g., from a mock community) to determine the frequency of
   mismatches between observed sequences and the most similar expected
   sequences, e.g., as a measure of sequencing/method error. However, any
   sequences may be provided as input to generate a report on pairwise
   alignment quality against a set of reference sequences.

   Parameters
   ----------
   query_sequences : FeatureData[Sequence]
       Sequences to test for exclusion
   reference_sequences : FeatureData[Sequence]
       Reference sequences to align against feature sequences
   show_alignments : Bool, optional
       Option to plot pairwise alignments of query sequences and their top
       hits.

   Returns
   -------
   visualization : Visualization</pre>
       </div>
     </div>
   </div>