2018.8/_sources/plugins/available/quality-control/evaluate-seqs.txt
evaluate-seqs: Compare query (observed) vs. reference (expected) sequences.
===========================================================================


.. raw:: html

   <table class="table action-info">
     <tbody>
       <tr>
         <th scope="row"><p></p>Citations</th>
         <td>

.. bibliography:: quality-control:evaluate-seqs.bib
   :all:
   :keyprefix: quality-control:evaluate-seqs:
   :labelprefix: quality-control:evaluate-seqs:

.. raw:: html

         </td>
       </tr>
     </tbody>
   </table>


.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <h4>Docstring:</h4>
         <pre>Usage: qiime quality-control evaluate-seqs [OPTIONS]

     This action aligns a set of query (e.g., observed) sequences against a set
     of reference (e.g., expected) sequences to evaluate the quality of
     alignment. The intended use is to align observed sequences against
     expected sequences (e.g., from a mock community) to determine the
     frequency of mismatches between observed sequences and the most similar
     expected sequences, e.g., as a measure of sequencing/method error.
     However, any sequences may be provided as input to generate a report on
     pairwise alignment quality against a set of reference sequences.

   Options:
     --i-query-sequences ARTIFACT PATH FeatureData[Sequence]
                                     Sequences to test for exclusion  [required]
     --i-reference-sequences ARTIFACT PATH FeatureData[Sequence]
                                     Reference sequences to align against feature
                                     sequences  [required]
     --p-show-alignments / --p-no-show-alignments
                                     Option to plot pairwise alignments of query
                                     sequences and their top hits.  [default:
                                     False]
     --o-visualization VISUALIZATION PATH
                                     [required if not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --citations                     Show citations and exit.
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
       <h4>Import:</h4>

.. command-block::
   :no-exec:

   from qiime2.plugins.quality_control.visualizers import evaluate_seqs

.. raw:: html

       <h4>Docstring:</h4>
         <pre>Compare query (observed) vs. reference (expected) sequences.

   This action aligns a set of query (e.g., observed) sequences against a set
   of reference (e.g., expected) sequences to evaluate the quality of
   alignment. The intended use is to align observed sequences against expected
   sequences (e.g., from a mock community) to determine the frequency of
   mismatches between observed sequences and the most similar expected
   sequences, e.g., as a measure of sequencing/method error. However, any
   sequences may be provided as input to generate a report on pairwise
   alignment quality against a set of reference sequences.

   Parameters
   ----------
   query_sequences : FeatureData[Sequence]
       Sequences to test for exclusion
   reference_sequences : FeatureData[Sequence]
       Reference sequences to align against feature sequences
   show_alignments : Bool, optional
       Option to plot pairwise alignments of query sequences and their top
       hits.

   Returns
   -------
   visualization : Visualization</pre>
       </div>
     </div>
   </div>